tests/type/good/functions.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn add(a: int, b: int) -> int {
	return a + b;
}

fn use() -> int {
	var x = 1;
	var y = 2;
	return add(x, y);
}

fn greet(name: string) {
	var msg = "hi " + name;
}

scene main
{
	var r = use();
}
