tests/type/errors/too_few_args.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f(a: int, b: int) -> int {
	return a + b;
}

scene main
{
	var r = f(1);
}
